--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ footer {
         </ul>
     </nav>
 </header>
-<img src="D:\sitio web\campus-juliaca.webp" alt="Logo" class="logo"width="200" height="100">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS54sdDLEyoNxXC_uSmYR-hpF10GRZMojdxLCLG53fpHuchyOE7mPUTyMX6tU2vzWJEhw&usqp=CAU" alt="Logo" class="logo"width="200" height="100">
 <section id="inicio">
     <h2>Inicio</h2>
     <p>Breve introducción sobre ti y tus intereses.</p>
